--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -1,1 +1,49 @@
-<p>signup works!</p>
+<div class="mt-4 col-8 offset-2">
+    <div class="card">
+        <div class="card-header">
+            Register
+        </div>
+        <div class="card-body">
+            <form [formGroup]="form" (ngSubmit)="onSubmit()">
+
+                <div class="alert alert-danger" [hidden]="!error">
+                    {{error}}
+                </div>
+                <div class="input-group input-group-lg mb-3">
+                    <span class="input-group-text">
+                        <i class="fas fa-user"
+                        [class.green-icon]="this.form.get('name')?.valid"
+                        [class.red-icon]="this.form.get('name')?.invalid && this.form.get('name')?.touched"></i>
+                    </span>
+                    <input formControlName="name" type="text" class="form-control" placeholder="Name">
+                </div>
+                <div class="input-group input-group-lg mb-3">
+                    <span class="input-group-text">
+                        <i class="fas fa-at"
+                        [class.green-icon]="this.form.get('email')?.valid"
+                        [class.red-icon]="this.form.get('email')?.invalid && this.form.get('email')?.touched"></i>
+                    </span>
+                    <input formControlName="email" type="text" class="form-control" placeholder="Email">
+                </div>
+                <div class="input-group input-group-lg mb-3">
+                    <span class="input-group-text">
+                        <i class="fas fa-key"
+                        [class.green-icon]="this.form.get('password')?.valid"
+                        [class.red-icon]="this.form.get('password')?.invalid && this.form.get('password')?.touched"></i>
+                    </span>
+                    <input formControlName="password" type="password" class="form-control" placeholder="Password">
+                </div>
+                <div class="input-group input-group-lg mb-3">
+                    <span class="input-group-text">
+                        <i class="fas fa-key"
+                        [class.green-icon]="this.form.get('password_confirmation')?.valid"
+                        [class.red-icon]="this.form.get('password_confirmation')?.invalid && this.form.get('password_confirmation')?.touched"></i>
+                    </span>
+                    <input formControlName="password_confirmation" type="password" class="form-control" placeholder="Password Confirmation">
+                </div>
+                <button type="submit" [disabled]="this.form.invalid" class="btn btn-primary">Signup</button>
+                <a routerLink="/login" class="btn btn-info float-right">Sign in</a>
+            </form>
+        </div>
+    </div>
+</div>
