se crea login y logout con canActivate en las rutas

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -28,6 +28,9 @@
                 <button type="submit" [disabled]="this.form.invalid" class="btn btn-primary">Sign in</button>
                 <a routerLink="/sign-up" class="btn btn-info float-right">Sign up</a>
             </form>
+            <small class="float-right">
+                <a routerLink="/request-reset">Reset Password</a>
+            </small>
         </div>
     </div>
 </div>
