--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -2,8 +2,9 @@
     <div class="container-fluid">
       <a class="navbar-brand">Angular + Laravel</a>
       <div>
-        <a class="navbar-brand" routerLink="login">Login</a>
-        <a class="navbar-brand" routerLink="profile">Profile</a>
+        <a class="navbar-brand" routerLink="login" *ngIf="!loggedIn">Login</a>
+        <a class="navbar-brand" href="#" (click)="logout($event)" *ngIf="loggedIn">Logout</a>
+        <a class="navbar-brand" routerLink="profile" *ngIf="loggedIn">Profile</a>
       </div>
     </div>
   </nav>
