--- a/frontend/src/app/components/password/request-reset/request-reset.component.html
+++ b/frontend/src/app/components/password/request-reset/request-reset.component.html
@@ -1,1 +1,20 @@
-<p>request-reset works!</p>
+<div class="mt-4 col-8 offset-2">
+    <div class="card">
+        <div class="card-header">
+            Send email for reset password
+        </div>
+        <div class="card-body">
+            <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                <div class="input-group input-group-lg mb-3">
+                    <span class="input-group-text">
+                        <i class="fas fa-at"
+                        [class.green-icon]="this.form.get('email')?.valid"
+                        [class.red-icon]="this.form.get('email')?.invalid && this.form.get('email')?.touched"></i>
+                    </span>
+                    <input formControlName="email" type="text" class="form-control" placeholder="Email">
+                </div>
+                <button type="submit" [disabled]="this.form.invalid" class="btn btn-primary">Send password reset</button>
+            </form>
+        </div>
+    </div>
+</div>
